create new branch

--- a/docs/product_management.ipynb
+++ b/docs/product_management.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# プロジェクト管理"
+    "# プロダクト管理"
    ]
   },
   {
@@ -46,7 +46,21 @@
    "metadata": {},
    "source": [
     "## 管理手法\n",
-    "### GitHub Projectsの使用"
+    "### GitHub Projectsの概要\n",
+    "GitHub Projectsを利用することで、タスク管理を行う。  \n",
+    "[一休 GitHub Projects を利用したタスク管理](https://user-first.ikyu.co.jp/entry/2023/11/09/175121)  \n",
+    "[GitHub Projects Docs](https://docs.github.com/ja/issues/planning-and-tracking-with-projects/learning-about-projects/about-projects)  \n",
+    "プロジェクトは、追加した issue と pull request から構築され、プロジェクトと作業の間に直接参照が作成されます。 変更を加えると情報がプロジェクトに自動的に同期され、ビューとグラフが更新されます。 この統合は双方向なので、pull reqeust や issue に関する情報をプロジェクト内で変更すると、その pull request や issue にはその情報が反映されます。\n",
+    "### GitHub Projectsの使用方法\n",
+    "* プロジェクトの作成\n",
+    "  * GitHub のリポジトリのページで、Projects をクリックします。\n",
+    "  * プロジェクトの作成をクリックします。\n",
+    "  * プロジェクトの名前を入力します。\n",
+    "  * プロジェクトのテンプレートを選択します。\n",
+    "  * プロジェクトを作成します。\n",
+    "* プロジェクトの編集\n",
+    "  * ISSUEの追加\n",
+    "    * プロジェクトページでAdd itemをクリックします。"
    ]
   }
  ],
