--- a/docs/product_management.ipynb
+++ b/docs/product_management.ipynb
@@ -60,7 +60,21 @@
     "  * プロジェクトを作成します。\n",
     "* プロジェクトの編集\n",
     "  * ISSUEの追加\n",
-    "    * プロジェクトページでAdd itemをクリックします。"
+    "    * プロジェクトページでAdd itemをクリックします。\n",
+    "  * タスクリストの追加\n",
+    "    * ISSUEページのマークダウンで次のマークダウンを入力します。それぞれの新しいタスクの前に - [ ]  を付けてから、次のいずれかを追加します。\n",
+    "      * 下書きタスク。 ドラフトタスクは、後で問題点に変換できるテキストです。\n",
+    "      * issue または pull request への完全なリンク。 たとえば、「 https://github.com/octo-org/octo-repo/issues/45 」のように入力します。 \n",
+    "      * issue または pull request がタスクリストと同じリポジトリにある場合は、#ISSUE-NUMBER 短縮構文を使用できます。 たとえば、「 #45 」のように入力します。\n",
+    "    * タスクリストのタイトルの変更\n",
+    "      * マークダウンのタスクリストのタイトルを編集します。下の例では、My tasks です。\n",
+    "```\n",
+    "[tasklist]\n",
+    "### My tasks\n",
+    "- [ ] https://github.com/octo-org/octo-repo/issues/45\n",
+    "- [ ] Draft task\n",
+    "- [ ] #45\n",
+    "```"
    ]
   }
  ],
