--- a/docs/detailed_design_docs_frontend.ipynb
+++ b/docs/detailed_design_docs_frontend.ipynb
@@ -6,6 +6,31 @@
    "source": [
     "# フロントエンド構成"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# djangoの検証\n",
+    "[django公式ドキュメント](https://docs.djangoproject.com/ja/5.0/)\n",
+    "* アプリの作成方法\n",
+    "```\n",
+    "cd src\n",
+    "django-admin startproject mysite\n",
+    "cd mysite\n",
+    "python manage.py startapp polls\n",
+    "```\n",
+    "* 開発サーバーの起動方法\n",
+    "```\n",
+    "cd src/mysite\n",
+    "python manage.py runserver\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
