fail to use django-plotly-dash

--- a/docs/detailed_design_docs_frontend.ipynb
+++ b/docs/detailed_design_docs_frontend.ipynb
@@ -30,6 +30,24 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# DjangoとPlotly Dashの統合検証\n",
+    "[GitHub GibbsConsulting/django-plotly-dash](https://github.com/GibbsConsulting/django-plotly-dash)  \n",
+    "を元に検証を行う。  \n",
+    "エラーが出て上手くいかなかった。また、設定も複雑になる。  \n",
+    "そのため、django-plotly-dashを使用せず、2つのサーバーを立ち上げて通信する形にする。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DjangoとPlotly Dashの独立サーバー連携検証"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
