change to run each server

--- a/docs/detailed_design_docs_frontend.ipynb
+++ b/docs/detailed_design_docs_frontend.ipynb
@@ -42,13 +42,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DjangoとPlotly Dashの独立サーバー連携検証"
+    "# DjangoとPlotly Dashの独立サーバー連携検証\n",
+    "上手くいった。\n",
+    "\n",
+    "Plotly Dashサーバーの立ち上げ\n",
+    "```\n",
+    "cd src/dash\n",
+    "python demo.py\n",
+    "```\n",
+    "http://127.0.0.1:8050/　にアクセスすると、Plotly Dashのページが表示される。  \n",
+    "\n",
+    "Djangoサーバーの立ち上げ\n",
+    "```\n",
+    "cd src/mysite\n",
+    "python manage.py runserver\n",
+    "```\n",
+    "http://127.0.0.1:8000/polls/　にアクセスすると、Djangoのページが表示される。\n",
+    "\n",
+    "それぞれのリンクをクリックすると、相手のページに遷移する。  \n",
+    "Plotly Dash側のリンク\n",
+    "```\n",
+    "app.layout = html.Div(\n",
+    "    [\n",
+    "        # Add a link to go back to Django\n",
+    "        html.A(\"Go to Django App\", href=\"http://localhost:8000/polls/\"),\n",
+    "    ]\n",
+    ")\n",
+    "```\n",
+    "Django側のリンク\n",
+    "```\n",
+    "<a href=\"http://localhost:8050\">Go to Dash App</a>\n",
+    "```"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
