add read ply feature #12

--- a/docs/detailed_design_docs_frontend.ipynb
+++ b/docs/detailed_design_docs_frontend.ipynb
@@ -74,6 +74,18 @@
     "<a href=\"http://localhost:8050\">Go to Dash App</a>\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 必要な機能\n",
+    "* 点群の表示\n",
+    "* 3D CADモデルの点群データへの変換\n",
+    "  * .step形式の3D CADモデルを.plyまたは.obj形式の点群データへ変換する\n",
+    "    * FreeCADをインストールし、FreeCADのpython APIを使用する\n",
+    "* 指定した点群データの表示"
+   ]
   }
  ],
  "metadata": {
